sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:9: error: too many arguments for method getNombreValeurs: ()Int
  var magouille1=getNombreValeurs(0)
                                 ^AlgBubbleSort1:10: error: too many arguments for method getNombreValeurs: ()Int
  var magouille2=getNombreValeurs(1)
                                 ^AlgBubbleSort1:11: error: too many arguments for method getNombreValeurs: ()Int
  var magouille3=getNombreValeurs(2)
                                 ^AlgBubbleSort1:12: error: too many arguments for method getNombreValeurs: ()Int
  var magouille4=getNombreValeurs(3)
                                 ^AlgBubbleSort1:13: error: too many arguments for method getNombreValeurs: ()Int
  var magouille5=getNombreValeurs(4)
                                 ^AlgBubbleSort1:14: error: too many arguments for method getNombreValeurs: ()Int
  var magouille6=getNombreValeurs(5)
                                 ^